--- a/wp-content/themes/escapist-two/style.css
+++ b/wp-content/themes/escapist-two/style.css
@@ -2907,12 +2907,9 @@ body:not(.single) .content-area .format-gallery .post-thumbnail:before, body:not
     -webkit-transform: none;
     transform: none;
   }
-  .content-area .format-standard.has-post-thumbnail .entry-header {
+  .content-area .format-standard.has-post-thumbnail > .entry-meta, .content-area .format-standard.has-post-thumbnail .entry-summary, .content-area .format-standard.has-post-thumbnail .entry-header {
     float: right;
     width: 422px;
-  }
-  .content-area .format-standard.has-post-thumbnail > .entry-meta, .content-area .format-standard.has-post-thumbnail .entry-summary {
-    clear: right;
   }
   .author-info .author-avatar {
     display: block;
@@ -2982,7 +2979,7 @@ body:not(.single) .content-area .format-gallery .post-thumbnail:before, body:not
     position: inherit;
     width: 165px;
   }
-  .content-area .format-standard.has-post-thumbnail .entry-header {
+  .content-area .format-standard.has-post-thumbnail > .entry-meta, .content-area .format-standard.has-post-thumbnail .entry-summary, .content-area .format-standard.has-post-thumbnail .entry-header {
     width: 359px;
   }
   .author-info {
@@ -3017,7 +3014,7 @@ body:not(.single) .content-area .format-gallery .post-thumbnail:before, body:not
   .content-area .format-standard a.post-thumbnail {
     width: 195px;
   }
-  .content-area .format-standard.has-post-thumbnail .entry-header {
+  .content-area .format-standard.has-post-thumbnail > .entry-meta, .content-area .format-standard.has-post-thumbnail .entry-summary, .content-area .format-standard.has-post-thumbnail .entry-header {
     width: 419px;
   }
   .author-info .author-avatar {
@@ -3041,7 +3038,7 @@ body:not(.single) .content-area .format-gallery .post-thumbnail:before, body:not
   .content-area .format-standard a.post-thumbnail {
     width: 270px;
   }
-  .content-area .format-standard.has-post-thumbnail .entry-header {
+  .content-area .format-standard.has-post-thumbnail > .entry-meta, .content-area .format-standard.has-post-thumbnail .entry-summary, .content-area .format-standard.has-post-thumbnail .entry-header {
     width: 569px;
   }
   .author-info .author-heading {
